--- a/index.html
+++ b/index.html
@@ -1,6 +1,9 @@
 <html>
 <meta http-equiv="Cache-Control" content="no-cache" />
 <meta http-equiv="Cache-Control" content="no-store" />
+<meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <meta name="description" content="">
 <head>
 <title>Kansas City, Crime Data - Tableau Web Data Connector</title>
 <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">
@@ -8,19 +11,48 @@
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js" integrity="sha384-0mSbJDEHialfmuBBQP6A4Qrprq5OVfW37PRR3j5ELqxss1yVqOtnepnHVP9aJ7xS" crossorigin="anonymous"></script>
 <script src="https://connectors.tableau.com/libs/tableauwdc-2.1.1.js" type="text/javascript"></script>
 
+  
+ <style>
+      .bd-placeholder-img {
+        font-size: 1.125rem;
+        text-anchor: middle;
+        -webkit-user-select: none;
+        -moz-user-select: none;
+        -ms-user-select: none;
+        user-select: none;
+      }
+
+      @media (min-width: 768px) {
+        .bd-placeholder-img-lg {
+          font-size: 3.5rem;
+        }
+      }
+    </style>
+    <!-- Custom styles for this template -->
+    <link href="jumbotron.css" rel="stylesheet">
 
 </head>
 <body>
-  <div class="container container-table">
-    <div class="row vertical-center-row">
-       <div class="text-center col-md-4 col-md-offset-4"">
-        <form role = "form" id = "tickerForm" autocomplete = "off"> 
-          <div class = "form-group" style = "margin: 10px;">
-             <a href='KSdata.html'>Kansas City Data wdc</a>
-          </div>  
-        </form> 
-       </div>
+  
+<main role="main">
+
+  <!-- Main jumbotron for a primary marketing message or call to action -->
+  <div class="jumbotron">
+    <div class="container">
+      <h1 class="display-3">KCPD Crime Data 2014</h1>
+      <p>This is a web data connector built using the <b>Socrata Open Data API (SODA)</b>, which provides programmatic access to the various datasets.
+		 This provides the user the ability to view the most current crime information within <b>Kansas City, Missouri</b>.
+			<h4>About This Dataset</h4>
+			Dataset Identifier: <b>nsn9-g8a4</b> <br/>
+			Total Rows: <b>124,832</b> <br/>
+			Source Domain: <b>data.kcmo.org</b> <br/>
+
+			https://dev.socrata.com/foundry/data.kcmo.org/nsn9-g8a4</p>
+      <p><a class="btn btn-primary btn-lg" href="KSdata.html" role="button">Get Data</a></p>
     </div>
   </div>
+
+</main>
+                                                           
 </body>
 </html>
