--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
 			Source Domain: <b>data.kcmo.org</b> <br/>
 
 			https://dev.socrata.com/foundry/data.kcmo.org/nsn9-g8a4</p>
-      <p><a class="btn btn-primary btn-lg" href="KSdata.html" role="button">Get Data</a></p>
+      <p><a class="btn btn-primary btn-lg" href="KCMOCrimedata.html" role="button">Get Data</a></p>
     </div>
   </div>
 
