--- a/index.html
+++ b/index.html
@@ -9,9 +9,10 @@
 <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js" type="text/javascript"></script>
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js" integrity="sha384-0mSbJDEHialfmuBBQP6A4Qrprq5OVfW37PRR3j5ELqxss1yVqOtnepnHVP9aJ7xS" crossorigin="anonymous"></script>
-<script src="https://connectors.tableau.com/libs/tableauwdc-2.1.1.js" type="text/javascript"></script>
 
-  
+<script src="https://connectors.tableau.com/libs/tableauwdc-2.1.1.js" type="text/javascript"></script>
+<script src="ksdataJS.js" type="text/javascript"></script>
+	
  <style>
       .bd-placeholder-img {
         font-size: 1.125rem;
@@ -49,6 +50,7 @@
 
 			https://dev.socrata.com/foundry/data.kcmo.org/nsn9-g8a4</p>
       <p><a class="btn btn-primary btn-lg" href="KCMOCrimedata.html" role="button">Get Data</a></p>
+	  <button type = "button" id = "submitButton" class = "btn btn-success" style = "margin: 10px;">Kansas City Data!</button>
     </div>
   </div>
 
