--- a/index.html
+++ b/index.html
@@ -49,8 +49,8 @@
 			Source Domain: <b>data.kcmo.org</b> <br/>
 
 			https://dev.socrata.com/foundry/data.kcmo.org/nsn9-g8a4</p>
-      <p><a class="btn btn-primary btn-lg" href="KCMOCrimedata.html" role="button">Get Data</a></p>
-	  <button type = "button" id = "submitButton" class = "btn btn-success" style = "margin: 10px;">Kansas City Data!</button>
+      
+	<p>  <button type = "button" id = "submitButton" class = "btn btn-primary btn-lg" >Get Data</button> </p>
     </div>
   </div>
 
