--- a/tabulatorIndex.html
+++ b/tabulatorIndex.html
@@ -16,7 +16,7 @@
     <!-- Extensions Library (this will be hosted on a CDN eventually) -->
     <script src="https://tableau.github.io/extensions-api/lib/tableau.extensions.1.latest.js"></script>
 
-    <script type="text/javascript" src="http://tabulator.info/js/tabulator/4.2/tabulator.min.js"></script>
+    <script type="text/javascript" src="tabulator.min.js"></script>
     
 
     <script type="text/javascript" src="tabulatorIndex.js"></script>
