--- a/tabulatorExt_v2/dialog.html
+++ b/tabulatorExt_v2/dialog.html
@@ -62,6 +62,8 @@
                 </div>
                 <br/>
                 <div>
+                  <div id="sort-it2">
+                  </div>
                         <div id="sort-it">
                                 <ol>
                                 
