--- a/tabulatorExt_v2.1/dialog.html
+++ b/tabulatorExt_v2.1/dialog.html
@@ -56,12 +56,12 @@
                 <div  class="container">
                         <p class="card-text">Select the worksheet/view for which you want to replicatae as HTML data table. </p>
                         <p>Current Dashboard Name : <b> <span  id="tableau_db_name"></span> </b> &nbsp;&nbsp;&nbsp;&nbsp;
-                            <label class="radio-inline">
+                            <!-- <label class="radio-inline"> -->
                                 <input type="radio" value="tabulator_grid" name="tabulatorType" checked /> Grid Layout &nbsp;&nbsp;&nbsp;&nbsp;
-                              </label>
-                              <label class="radio-inline">
+                            <!--   </label> -->
+                            <!--   <label class="radio-inline"> -->
                                 <input type="radio" value="tabulator_nested" name="tabulatorType" /> Nested
-                              </label>
+                            <!--     </label> -->
                         </p>
                     <select id="selectWorksheet">
                         <option value="" disabled selected>Choose Your Worksheet</option> <!-- disabled -->
