--- a/tabulatorExt_v2.1/dialog.html
+++ b/tabulatorExt_v2.1/dialog.html
@@ -62,6 +62,10 @@
                             <!--   <label class="radio-inline"> -->
                                 <input type="radio" value="tabulator_nested" name="tabulatorType" /> Nested
                             <!--     </label> -->
+                            <select id="tabulatorGridType">
+                                <option value="tabulator_grid" selected>Grid</option> 
+                                <option value="tabulator_nested" selected>Nested</option> 
+                            </select>
                         </p>
                     <select id="selectWorksheet">
                         <option value="" disabled selected>Choose Your Worksheet</option> <!-- disabled -->
