--- a/tabulatorExt_v2.1/dialog.html
+++ b/tabulatorExt_v2.1/dialog.html
@@ -62,9 +62,9 @@
                             <!--   <label class="radio-inline"> -->
                                 <input type="radio" value="tabulator_nested" name="tabulatorType" /> Nested
                             <!--     </label> -->
-                            <select id="tabulatorGridType">
+                            <select id="selecttabulatorGridType">
                                 <option value="tabulator_grid" selected>Grid</option> 
-                                <option value="tabulator_nested" selected>Nested</option> 
+                                <option value="tabulator_nested" >Nested</option> 
                             </select>
                         </p>
                     <select id="selectWorksheet">
