--- a/tabulatorExt_v2.1/dialog.html
+++ b/tabulatorExt_v2.1/dialog.html
@@ -56,16 +56,15 @@
                 <div  class="container">
                         <p class="card-text">Select the worksheet/view for which you want to replicatae as HTML data table. </p>
                         <p>Current Dashboard Name : <b> <span  id="tableau_db_name"></span> </b> &nbsp;&nbsp;&nbsp;&nbsp;
-                            <!-- <label class="radio-inline"> -->
+                        <span  id="span_rdb">
+                            <label class="radio-inline">
                                 <input type="radio" value="tabulator_grid" name="tabulatorType" checked /> Grid Layout &nbsp;&nbsp;&nbsp;&nbsp;
-                            <!--   </label> -->
-                            <!--   <label class="radio-inline"> -->
+                            </label>
+                            <label class="radio-inline">
                                 <input type="radio" value="tabulator_nested" name="tabulatorType" /> Nested
-                            <!--     </label> -->
-                            <select id="selecttabulatorGridType">
-                                <option value="tabulator_grid" selected>Grid</option> 
-                                <option value="tabulator_nested" >Nested</option> 
-                            </select>
+                            </label>
+                         </span>
+                            
                         </p>
                     <select id="selectWorksheet">
                         <option value="" disabled selected>Choose Your Worksheet</option> <!-- disabled -->
@@ -128,13 +127,13 @@
                     </select>
 
                           <label class="radio-inline">
-                            <input type="radio" value="theme1" name="optradio" checked>Basic 1
+                            <input type="radio" value="standard" name="optradio_CSS" checked> Standard
                           </label>
                           <label class="radio-inline">
-                            <input type="radio" value="theme2" name="optradio">Dark background
+                            <input type="radio" value="simple" name="optradio_CSS"> Simple
                           </label>
                           <label class="radio-inline">
-                            <input type="radio" value="theme3" name="optradio">Option 3
+                            <input type="radio" value="dark" name="optradio_CSS"> Dark
                           </label>
                 </div>
             </div>
