--- a/tabulatorExt_v2.1/dialog.html
+++ b/tabulatorExt_v2.1/dialog.html
@@ -118,23 +118,18 @@
             <div class="tab-pane fade" id="nav-profile" role="tabpanel" aria-labelledby="nav-profile-tab">
                 <br/> 
                 <div  class="container">
-                    <p>Select the style for the data table.</p>
-                    <select id="optradio_theme">
-                        <option value="" disabled selected>Choose CSS theme for datatable</option>
-                        <option value="theme1">Standard</option>
-                        <option value="theme2">Simple</option>
-                        <option value="theme3">Dark</option>                        
-                    </select>
+                    <p> Select the style for the data table.  &nbsp;&nbsp;&nbsp;                  
 
                           <label class="radio-inline">
-                            <input type="radio" value="standard" name="optradio_CSS" checked> Standard
+                            <input type="radio" value="standard" name="optradio_CSS" checked> Standard &nbsp;&nbsp;&nbsp;
                           </label>
                           <label class="radio-inline">
-                            <input type="radio" value="simple" name="optradio_CSS"> Simple
+                            <input type="radio" value="simple" name="optradio_CSS"> Simple &nbsp;&nbsp;&nbsp;
                           </label>
                           <label class="radio-inline">
-                            <input type="radio" value="dark" name="optradio_CSS"> Dark
+                            <input type="radio" value="dark" name="optradio_CSS"> Dark &nbsp;&nbsp;&nbsp;
                           </label>
+                    </p>      
                 </div>
             </div>
             <div class="tab-pane fade" id="nav-contact" role="tabpanel" aria-labelledby="nav-contact-tab">...</div>
