--- a/tableau-extension-sunburst/dialog.html
+++ b/tableau-extension-sunburst/dialog.html
@@ -29,7 +29,7 @@
 <div class="container">
         
         <div> 
-            <h1> Tabulator DataTable Extension - Settings </h1>
+            <h1> Tableau Extension - Settings </h1>
         </div>
         
         <br/>
