--- a/tableau-extension-sunburst/sunburst_vasturaino.html
+++ b/tableau-extension-sunburst/sunburst_vasturaino.html
@@ -26,6 +26,13 @@
         }
     </style>
 
+    <!-- Bootstrap -->
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" >
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" ></script>
+
+    <!-- Extensions Library (this will be hosted on a CDN eventually) -->
+    <script src="https://tableau.github.io/extensions-api/lib/tableau.extensions.1.latest.js"></script>
+
     <script src='https://d3js.org/d3.v4.min.js'></script>
 
     <script type="text/javascript" src="indexpage.js"></script>
