--- a/tableau-extension-sunburst/sunburst_vasturaino.html
+++ b/tableau-extension-sunburst/sunburst_vasturaino.html
@@ -27,6 +27,10 @@
         }
     </style>
 
+
+<!-- jQuery -->
+<script src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
+
     <!-- Bootstrap -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" >
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" ></script>
@@ -50,7 +54,7 @@
         <div class="container">
                 <div class="table-responsive">
                     <div id="configure" hide>
-                        <h3>Configure Tabulator DataTable Extension</h3>
+                        <h3>Configure Tableau Extension</h3>
                         <ul>
                             <li>Click on the 'Configure' context menu item</li>
                             <li>Choose your settings and click on Apply button</li>
