--- a/tableau-extension-sunburst/sunburst_vasturaino.html
+++ b/tableau-extension-sunburst/sunburst_vasturaino.html
@@ -49,7 +49,7 @@
     <div id="example-chart"></div>
     <!-- sunburst chart -->
 
-    <div id="t1"></div>
+    <div id="t1"></div>   <br />
 
         <div class="container">
                 <div class="table-responsive">
